--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asgiref==3.8.1
+gitasgiref==3.8.1
 Django==5.0.6
 exceptiongroup==1.2.1
 factory-boy==3.3.0
@@ -6,7 +6,7 @@ Faker==25.3.0
 iniconfig==2.0.0
 packaging==24.0
 pluggy==1.5.0
-pytest==8.2.1
+pytest==8.2.2
 pytest-django==4.8.0
 python-dateutil==2.9.0.post0
 six==1.16.0
